# pi-par

./: .gitignore  README.md  pi-par.cabal  stack.yaml
Idris/: AST.idr  AbandonedDelegNatBound.idr  AltNoPartDelegation.idr  ErrOr.idr  Main.idr  Main2.idr  Main3.idr  Main4.idr  Main5.idr  Makefile  MatMul.idr  New.idr  OldMainPartialDelegation.idr  ParLib.idr  ParMatMul.idr  ParQueens.idr  ParSkel.idr  ParSumEuler.idr  ParSumEuler2.idr  ParseEx.idr  Queens.idr  Queens2.idr  Skel.idr  Skel2.idr  SumEuler.idr  example.erl
Idris/erlang-out/: -module(utils).erl  example.erl  example2.erl  example4.erl  image_pipar.erl  parMatMul.erl  parQueens.erl  parSumEuler.erl  parSumEuler2.erl  pipe.erl  queens.erl  queens2.erl  rr.erl  sumEuler.erl  utils.erl
Idris/erlang-out/image_merge/: image_pipar.erl  list_merge.erl  runMerge
app/: Main.hs
par-examples/: Concurrency.pi  Concurrent.pi  Equality.pi  Logic.pi  Maybe.pi  Ping.pi  Prelude.pi  Process.pi
pi/: BoolLib.pi  Equal.pi  Fin.pi  FinHw.pi  Fix.pi  Hurkens.pi  Hw1.pi  Hw2.pi  Lambda.pi  Lambda0.pi  Lambda1.pi  Lambda2.pi  Lec1.pi  Lec2.pi  Lec3.pi  Lec4.pi  Lennart.pi  List.pi  Makefile  Nat.pi  NatChurch.pi  Prelude.pi  Product.pi  Product1.pi  Sigma.pi  Vec.pi
results/: parse_results_all.py
results/pi-par/fib/: fib112_45_seq.txt  fibPar_30000_30.txt  fib_par_112.txt
results/pi-par/image/: image_farm_100_par.txt  image_pipe_100_par.txt  (+2 more)
skel/: fib.erl  matmul.erl  queens.erl  sumEuler.erl
src/: Arbitrary.hs  Desugar.hs  Environment.hs  Equal.hs  LayoutToken.hs  Lexer.hs  Modules.hs  Parser.hs  PrettyPrint.hs  Syntax.hs  TODO  TypeCheck.hs
test/: Main.hs
(+40 files in other folders)
